Remove depreacted Class.newInstance()